# coding-challenge

./: .gitignore  .gitmodules  .rubocop.yml  Gemfile  README.md  docker-compose.yml
.github/: dependabot.yml
config/: application.rb  cable.yml  credentials.yml.enc  database.yml
serverside_challenge_1/challenges/yukikawamura/electricity-rate-simulator/: README.md  pyproject.toml
serverside_challenge_1/challenges/yukikawamura/electricity-rate-simulator/electricity_rate_simulator/: app.py  core.py  model.py  utils.py
serverside_challenge_1/challenges/yukikawamura/electricity-rate-simulator/electricity_rate_simulator/core/: electric_simulate.py  electric_simurate.py  exception.py
serverside_challenge_1/challenges/yukikawamura/electricity-rate-simulator/electricity_rate_simulator/data/plovider/jxtg-electric/: plan.csv
serverside_challenge_1/challenges/yukikawamura/electricity-rate-simulator/electricity_rate_simulator/data/plovider/looop/: plan.csv
serverside_challenge_1/challenges/yukikawamura/electricity-rate-simulator/electricity_rate_simulator/data/plovider/tepco/: plan.csv
serverside_challenge_1/challenges/yukikawamura/electricity-rate-simulator/electricity_rate_simulator/data/plovider/tokyo-gas/: plan.csv
serverside_challenge_1/challenges/yukikawamura/electricity-rate-simulator/tests/: conftest.py  test_api.py  test_core.py  test_model.py
serverside_challenge_1/challenges/yukikawamura/electricity-rate-simulator/tests/assets/: test_plan.json  test_plan_invailed_contracts.json  test_plan_invailed_usages.json  test_plan_invalid_contracts.json
(+3131 files in other folders)
